// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentReportAssessmentListTest render: fail 1`] = `
<DocumentFragment>
  <div>
    <div
      class="assessment-details"
    >
      <h3
        class="assessment-header"
      >
        Assessment1
        <mock-outcomechip
          count="2"
          outcometype="fail"
        />
      </h3>
      <mock-assessmentreportsteplist
        deps="[object Object]"
        status="2"
        steps="[object Object],[object Object]"
      />
    </div>
    <div
      class="assessment-details"
    >
      <h3
        class="assessment-header"
      >
        Assessment2
        <mock-outcomechip
          count="1"
          outcometype="fail"
        />
      </h3>
      <mock-assessmentreportsteplist
        deps="[object Object]"
        status="2"
        steps="[object Object]"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`AssessmentReportAssessmentListTest render: incomplete 1`] = `
<DocumentFragment>
  <div>
    <div
      class="assessment-details"
    >
      <h3
        class="assessment-header"
      >
        Assessment1
        <mock-outcomechip
          count="1"
          outcometype="incomplete"
        />
      </h3>
      <mock-assessmentreportsteplist
        deps="[object Object]"
        status="1"
        steps="[object Object]"
      />
    </div>
    <div
      class="assessment-details"
    >
      <h3
        class="assessment-header"
      >
        Assessment2
        <mock-outcomechip
          count="1"
          outcometype="incomplete"
        />
      </h3>
      <mock-assessmentreportsteplist
        deps="[object Object]"
        status="1"
        steps="[object Object]"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`AssessmentReportAssessmentListTest render: pass 1`] = `
<DocumentFragment>
  <div>
    <div
      class="assessment-details"
    >
      <h3
        class="assessment-header"
      >
        Assessment1
        <mock-outcomechip
          count="1"
          outcometype="pass"
        />
      </h3>
      <mock-assessmentreportsteplist
        deps="[object Object]"
        status="0"
        steps="[object Object]"
      />
    </div>
  </div>
</DocumentFragment>
`;
